# MrBeamPlugin

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  Dockerfile  MANIFEST.in  README.md  babel.cfg  cypress.config-template.js  cypress.config.js  dev-setup.sh  docker-octoprint-config.yaml  package-lock.json  package.json  profile.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  versioneer.py  web-compile-config.yaml
.jira/: config.yml
cypress/: README.md  cypress-ci-run.ts  cypress-spec-split.ts
docker_config/: docker-octoprint-config.yaml  docker-users.yaml
docs/: profiler.md
extras/: README.txt  mrbeam.md
octoprint_mrbeam/: .jshintrc  __init__.py  __version.py  _version.py  acc_line_buffer.py  cli.py  comm_acc2.py  coverage_test.py  cv2_override.py  dependencies.txt  error_codes.py  events.py  hooks.py  iobeam_handler.py  led_events.py  materials.py  messages.py  migrate.py  mrb_logger.py  mrbeam_events.py  notifications.py  os_health_care.py  printer.py  profile.py  selftest.py  software_update_information.py  support.py  user_notification_system.py  version_comparator.py  wizard_config.py
scss/: _variables.scss  loginui.scss
test/: gcode2img.py  test_camera.py  test_iobeam_handler.py
tests/: README  conftest.py  draw_gcode.py  test___init__.py  test_camera.py  test_coverage_test.py  test_gcode.py  test_init.py  test_materials.py  test_mrb_logger.py  test_settings.py  test_undistort.py
tests/data/: data.py
(+720 files in other folders)
