
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440-post
versionfile_source = octoprint_mrbeam/_version.py
versionfile_build = octoprint_mrbeam/_version.py
tag_prefix = v
parentdir_prefix =
